--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "yqy-test",
   "description": "A Vue.js project",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "author": "wangshanshan <821051557@qq.com>",
   "license": "MIT",
   "private": false,
@@ -10,9 +10,7 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
-    "element-ui": "^2.15.13",
-    "vue": "^2.5.11",
-    "vue-count-to": "^1.0.13"
+    "vue": "^2.5.11"
   },
   "browserslist": [
     "> 1%",
@@ -20,6 +18,8 @@
     "not ie <= 8"
   ],
   "devDependencies": {
+    "vue-count-to": "^1.0.13",
+    "element-ui": "^2.15.13",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
