--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
-    "vue": "^2.5.11"
+    "vue": "^2.5.11",
+    "vue-count-to": "^1.0.13"
   },
   "browserslist": [
     "> 1%",
@@ -18,7 +19,7 @@
     "not ie <= 8"
   ],
   "devDependencies": {
-    "vue-count-to": "^1.0.13",
+   
     "element-ui": "^2.15.13",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
